--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: red;
 }
 
 .App-logo {
@@ -9,7 +10,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: red;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
