--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  background: red;
 }
 
 .App-logo {
@@ -10,7 +9,7 @@
 }
 
 .App-header {
-  background-color: red;
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
